Added Facebook date

--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,7 @@ googleAnalytics = "UA-146179797-1"
 	linkedin = "andrés-ibañez-30234033"
 	reddit = "andyibanez"
 	gravatar = "leonnears+realpic@gmail.com"
+    facebook = "AndyIbanezCom"
 
 ## Site Settings
 [params]
