--- a/config.toml
+++ b/config.toml
@@ -63,6 +63,11 @@ googleAnalytics = "UA-146179797-1"
     identifier = "bolivia"
     weight = 400
     url = "/bolivia/"
+[[menu.main]]
+    name = "Privacy Policy"
+    identifier = "privacy-policy"
+    weight = 500
+    url = "/privacy-policy/"
 
 
 [taxonomies]
