--- a/config.toml
+++ b/config.toml
@@ -19,8 +19,8 @@ googleAnalytics = "UA-146179797-1"
 ## Site Settings
 [params]
     author = "Andy Ibanez"
-    title = "Software developer from La Paz, Bolivia"
-    # description = "..."
+    title = "Andy Ibanez - iOS Developer"
+    description = "iOS Developer from La Paz, Bolivia. Programming for iOS since 2011."
     authorimage = "/static/img/me.jpg"
     dateformat = "Jan 2, 2006"
 
